Fix live preview text not wrapping to new line

--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,10 @@ button:focus-visible {
    grid-template-rows: auto auto 1fr;
 }
 
+.live-preview * {
+   word-break: break-word;
+}
+
 .preview-section ul {
    height: auto;
    width: 95%;
@@ -342,7 +346,7 @@ button:focus-visible {
    }
 
    .personal-input-preview img {
-      width: 2.5vw;
+      width: 2vw;
    }
 
    .delete-input img {
